# visual_detection_updated

install/: local_setup.sh  setup.sh
install/camara/share/camara/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
install/cv_bridge/share/cv_bridge/: local_setup.sh  package.sh
install/iarocks_py/lib/iarocks_py/: detection_node
install/iarocks_py/share/iarocks_py/: package.ps1  package.sh  package.zsh
install/image_geometry/share/image_geometry/: package.sh
install/multicamera/lib/multicamera/: camera_publisher
install/multicamera/share/ament_index/resource_index/parent_prefix_path/: multicamera
install/multicamera/share/multicamera/: local_setup.sh  package.sh  package.xml
install/multicamera/share/multicamera/cmake/: multicameraConfig.cmake
install/my_msgs/include/my_msgs/my_msgs/msg/detail/: camara_mensajes__description.c  camara_mensajes__rosidl_typesupport_fastrtps_c.h  camara_mensajes__rosidl_typesupport_introspection_c.h  camara_mensajes__struct.h  camara_mensajes__type_support.c  camara_mensajes__type_support.h  camara_mensajes__type_support.hpp
install/my_msgs/share/ament_index/resource_index/rosidl_interfaces/: my_msgs
install/my_msgs/share/my_msgs/: local_setup.sh  package.sh  package.xml
install/my_msgs/share/my_msgs/cmake/: export_my_msgs__rosidl_generator_pyExport-noconfig.cmake  my_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_msgs/share/my_msgs/msg/: CamaraMensajes.json
install/opencv_tests/share/opencv_tests/: package.sh
install/rocket/lib/rocket/: rocks_node
install/rocket/share/rocket/: package.ps1  package.sh
install/vision_opencv/share/ament_index/resource_index/parent_prefix_path/: vision_opencv
install/vision_opencv/share/vision_opencv/: package.sh
log/: latest_build
src/camara/: CMakeLists.txt  package.xml
src/camara/src/: camara_node.cpp  subscriber.cpp
src/iarocks_py/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.sh
src/install/camara/lib/camara/: camara_node
src/install/camara/share/camara/: local_setup.dsv  package.dsv  package.sh
src/install/camara/share/camara/cmake/: camaraConfig.cmake
src/install/cv_bridge/share/cv_bridge/: local_setup.sh  package.sh
src/install/iarocks_py/share/iarocks_py/: package.bash  package.dsv  package.sh
src/install/image_geometry/share/image_geometry/: local_setup.sh  package.sh
src/install/multicamera/lib/multicamera/: camera_publisher  camera_subscriber
src/install/multicamera/share/multicamera/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/multicamera/share/multicamera/cmake/: multicameraConfig.cmake
src/install/my_msgs/include/my_msgs/my_msgs/msg/detail/: camara_mensajes__rosidl_typesupport_introspection_cpp.hpp  camara_mensajes__traits.hpp
src/install/my_msgs/share/my_msgs/: package.sh
src/install/my_msgs/share/my_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_my_msgs__rosidl_generator_cExport.cmake  export_my_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  my_msgs__rosidl_typesupport_cExport.cmake  my_msgs__rosidl_typesupport_introspection_cExport.cmake
src/install/opencv_tests/share/opencv_tests/: package.sh
src/install/rocket/share/rocket/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
src/install/vision_opencv/share/ament_index/resource_index/parent_prefix_path/: vision_opencv
src/install/vision_opencv/share/vision_opencv/: package.sh
src/log/: latest_build
src/multicamera/: CMakeLists.txt  package.xml
src/multicamera/src/: camera_publisher.cpp  camera_subscriber.cpp
src/my_msgs/: CMakeLists.txt  package.xml
src/rocket/: CMakeLists.txt
src/rocket/src/: rocks_node.cpp  subscriberock.cpp
