<?xml version="1.0"?>
<package format="2">
  <name>multicamera</name>
  <version>0.0.1</version>
  <description>Paquete ROS2 para publicar y suscribirse a múltiples cámaras usando OpenCV</description>
  <maintainer email="tu_email@dominio.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <!-- Herramienta de build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias de compilación -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Dependencias opcionales de test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>