<?xml version="1.0"?>
<package format="3">
  <name>my_msgs</name>
  <version>0.0.0</version>
  <description>Mensajes personalizados para ROS 2</description>
  <maintainer email="luis@todo.todo">luis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- THIS MUST BE OUTSIDE <export> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




